projekt simply-chocolate rozpoczęcie pracy

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ body {
     --transition-tf: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* ============================== Comman Styles ============================== */
+/* ============================== Comman Styles ============================== */
+/* ============================== Comman Styles ============================== */
+
 * {
     margin: 0px;
     padding: 0px;
@@ -47,3 +51,295 @@ img {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
+.container {
+    width: 100%;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
+
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+/* ======================================== MOBILE 👇 ======================================== */
+
+@media screen and (max-width: 767px) {
+    .container {
+        min-width: 320px;
+        max-width: 375px;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+
+    .hero-section {
+        background-color: var(--background-dark-color);
+        padding: 395px 20px 20px;
+        border-radius: 30px;
+    }
+
+    .background-image-section {
+        background-image: url('../images/chocolate-background-335x620-mobile.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            max-width: 767px;
+            min-width: 320px;
+    }
+
+    @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            .background-image-section { url('../images/chocolate-background-670x1240-mobile@2x.jpg');
+            }
+        }
+    
+    .modal-and-link-button {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .modal-button-first-line {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+}
+
+/* ============================== Header ============================== */
+/* ============================== Header ============================== */
+/* ============================== Header ============================== */
+
+
+/* ============================== Hero ============================== */
+/* ============================== Hero ============================== */
+/* ============================== Hero ============================== */
+
+
+/* ============================== Advantages ============================== */
+/* ============================== Advantages ============================== */
+/* ============================== Advantages ============================== */
+
+
+/* ============================== Unique components ============================== */
+/* ============================== Unique components ============================== */
+/* ============================== Unique components ============================== */
+
+
+/* ============================== How it’s made? ============================== */
+/* ============================== How it’s made? ============================== */
+/* ============================== How it’s made? ============================== */
+
+
+/* ============================== Our products ============================== */
+/* ============================== Our products ============================== */
+/* ============================== Our products ============================== */
+
+
+/* ============================== Top sellers ============================== */
+/* ============================== Top sellers ============================== */
+/* ============================== Top sellers ============================== */
+
+
+/* ============================== Reviews ============================== */
+/* ============================== Reviews ============================== */
+/* ============================== Reviews ============================== */
+
+
+/* ============================== Subscribe ============================== */
+/* ============================== Subscribe ============================== */
+/* ============================== Subscribe ============================== */
+
+/* ============================== Footer ============================== */
+/* ============================== Footer ============================== */
+/* ============================== Footer ============================== */
+
+/* ========================= Modal Window - Buy now ========================= */
+
+/* ========================= Modal Window - Leave a review about our chocolate ==================== */
+
+/* ========================= Modal Window - Explore our new chocolate first ==================== */
+
+
+
+
+
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+/* ======================================== TABLET 👇 ======================================== */
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+        margin: 0 auto;
+        padding: 0 32px;
+    }
+}
+
+/* ============================== Header ============================== */
+/* ============================== Header ============================== */
+/* ============================== Header ============================== */
+
+
+/* ============================== Hero ============================== */
+/* ============================== Hero ============================== */
+/* ============================== Hero ============================== */
+
+
+/* ============================== Advantages ============================== */
+/* ============================== Advantages ============================== */
+/* ============================== Advantages ============================== */
+
+
+/* ============================== Unique components ============================== */
+/* ============================== Unique components ============================== */
+/* ============================== Unique components ============================== */
+
+
+/* ============================== How it’s made? ============================== */
+/* ============================== How it’s made? ============================== */
+/* ============================== How it’s made? ============================== */
+
+
+/* ============================== Our products ============================== */
+/* ============================== Our products ============================== */
+/* ============================== Our products ============================== */
+
+
+/* ============================== Top sellers ============================== */
+/* ============================== Top sellers ============================== */
+/* ============================== Top sellers ============================== */
+
+
+/* ============================== Reviews ============================== */
+/* ============================== Reviews ============================== */
+/* ============================== Reviews ============================== */
+
+
+/* ============================== Subscribe ============================== */
+/* ============================== Subscribe ============================== */
+/* ============================== Subscribe ============================== */
+
+/* ============================== Footer ============================== */
+/* ============================== Footer ============================== */
+/* ============================== Footer ============================== */
+
+/* ========================= Modal Window - Buy now ========================= */
+
+/* ========================= Modal Window - Leave a review about our chocolate ==================== */
+
+/* ========================= Modal Window - Explore our new chocolate first ==================== */
+
+
+
+
+
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+/* ======================================== NOT DESKTOP 👇 ======================================== */
+
+@media screen and (max-width: 1199px) {
+    
+}
+
+
+
+
+
+
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+/* ======================================== DESKTOP 👇 ======================================== */
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+        margin: 0 auto;
+        padding: 0 32px;
+    }
+}
+
+/* ============================== Header ============================== */
+/* ============================== Header ============================== */
+/* ============================== Header ============================== */
+
+
+/* ============================== Hero ============================== */
+/* ============================== Hero ============================== */
+/* ============================== Hero ============================== */
+
+
+/* ============================== Advantages ============================== */
+/* ============================== Advantages ============================== */
+/* ============================== Advantages ============================== */
+
+
+/* ============================== Unique components ============================== */
+/* ============================== Unique components ============================== */
+/* ============================== Unique components ============================== */
+
+
+/* ============================== How it’s made? ============================== */
+/* ============================== How it’s made? ============================== */
+/* ============================== How it’s made? ============================== */
+
+
+/* ============================== Our products ============================== */
+/* ============================== Our products ============================== */
+/* ============================== Our products ============================== */
+
+
+/* ============================== Top sellers ============================== */
+/* ============================== Top sellers ============================== */
+/* ============================== Top sellers ============================== */
+
+
+/* ============================== Reviews ============================== */
+/* ============================== Reviews ============================== */
+/* ============================== Reviews ============================== */
+
+
+/* ============================== Subscribe ============================== */
+/* ============================== Subscribe ============================== */
+/* ============================== Subscribe ============================== */
+
+/* ============================== Footer ============================== */
+/* ============================== Footer ============================== */
+/* ============================== Footer ============================== */
+
+/* ========================= Modal Window - Buy now ========================= */
+
+/* ========================= Modal Window - Leave a review about our chocolate ==================== */
+
+/* ========================= Modal Window - Explore our new chocolate first ==================== */
